--- a/src/app/pages/safety/safety.component.html
+++ b/src/app/pages/safety/safety.component.html
@@ -57,11 +57,23 @@
           </div>
         </div>
         
-        <!-- Total Counter Box -->
-        <div class="total-counter-box">
-          <i class="material-icons">inventory_2</i>
-          <span>Tổng: {{ filteredMaterials.length }} mã</span>
-        </div>
+                 <!-- Total Counter Box -->
+         <div class="total-counter-box">
+           <i class="material-icons">inventory_2</i>
+           <span>Tổng: {{ filteredMaterials.length }} mã</span>
+         </div>
+         
+         <!-- Total Pallet ASM1 Box -->
+         <div class="total-pallet-box total-pallet-asm1">
+           <i class="material-icons">pallet</i>
+           <span>ASM1: {{ getTotalPalletASM1() }} pallet</span>
+         </div>
+         
+         <!-- Total Pallet ASM2 Box -->
+         <div class="total-pallet-box total-pallet-asm2">
+           <i class="material-icons">pallet</i>
+           <span>ASM2: {{ getTotalPalletASM2() }} pallet</span>
+         </div>
         
         <!-- Search Type Selector -->
         <div class="search-type-selector">
@@ -142,11 +154,16 @@
               Gộp Dòng Trùng
             </button>
             
-            <button class="check-duplicates-btn" (click)="checkDuplicateMaterials()" title="Kiểm tra các dòng trùng lặp">
-              <i class="material-icons">search</i>
-              Kiểm Tra Trùng
-            </button>
-         </div>
+                         <button class="check-duplicates-btn" (click)="checkDuplicateMaterials()" title="Kiểm tra các dòng trùng lặp">
+               <i class="material-icons">search</i>
+               Kiểm Tra Trùng
+             </button>
+             
+             <button class="reset-btn" (click)="resetQuantities()" title="Reset lượng ASM1 và ASM2 về 0 để nhập lại">
+               <i class="material-icons">restore</i>
+               Reset
+             </button>
+          </div>
          
          <!-- Import Progress Indicator -->
          <div class="import-progress" *ngIf="isImporting">
@@ -308,11 +325,11 @@
                        min="0"
                        step="0.01">
               </td>
-              <td class="status-cell">
-                <span class="badge" [class]="getStatusClass(material)">
-                  {{ getStatusText(material) }}
-                </span>
-              </td>
+                             <td class="status-cell">
+                 <div class="status-icon" [class]="getStatusClass(material)">
+                   <span class="status-percentage">{{ getStatusPercentage(material) }}%</span>
+                 </div>
+               </td>
               <td class="delete-cell">
                 <button class="delete-btn" 
                         (click)="deleteMaterial(material)" 
